--- a/contrib/other-builds/moses-cmd/.project
+++ b/contrib/other-builds/moses-cmd/.project
@@ -6,6 +6,7 @@
 		<project>lm</project>
 		<project>moses</project>
 		<project>OnDiskPt</project>
+		<project>search</project>
 		<project>util</project>
 	</projects>
 	<buildSpec>
