c++ version of fuzzy match works

--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -2077,9 +2077,9 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/src/fuzzy-match/create_xml.cpp</locationURI>
 		</link>
 		<link>
-			<name>fuzzy-match/fuzzy-match</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
+			<name>fuzzy-match/create_xml.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/src/fuzzy-match/create_xml.h</locationURI>
 		</link>
 		<link>
 			<name>CYKPlusParser/bin/gcc-4.6</name>
@@ -2130,21 +2130,6 @@
 			<name>fuzzy-match/bin/gcc-4.6</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/fuzzy-match/Alignments.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/src/fuzzy-match/Alignments.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/fuzzy-match/Alignments.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/src/fuzzy-match/Alignments.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/fuzzy-match/create_xml.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/src/fuzzy-match/create_xml.cpp</locationURI>
 		</link>
 		<link>
 			<name>CYKPlusParser/bin/gcc-4.6/release</name>
