--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -372,11 +372,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/DummyScoreProducers.h</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
 			<name>DynSuffixArray.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSuffixArray.cpp</locationURI>
@@ -1262,11 +1257,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/XmlOption.h</locationURI>
 		</link>
 		<link>
-			<name>fuzzy-match</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
 			<name>gzfilebuf.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/gzfilebuf.h</locationURI>
@@ -1485,91 +1475,6 @@
 			<name>CompactPT/bin</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/FileHandler.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/FileHandler.cpp</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/FileHandler.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/FileHandler.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/Jamfile</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/Jamfile</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/RandLMCache.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/RandLMCache.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/RandLMFilter.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/RandLMFilter.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/bin</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/fdstream.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/fdstream.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/hash.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/hash.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/onlineRLM.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/onlineRLM.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/params.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/params.cpp</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/params.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/params.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/perfectHash.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/perfectHash.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/quantizer.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/quantizer.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/types.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/types.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/utils.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/utils.h</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/vocab.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/vocab.cpp</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/vocab.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/vocab.h</locationURI>
 		</link>
 		<link>
 			<name>LM/Base.cpp</name>
@@ -1912,71 +1817,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/Scope3Parser/VarSpanTrieBuilder.h</locationURI>
 		</link>
 		<link>
-			<name>fuzzy-match/Alignments.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/Alignments.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/Alignments.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/Alignments.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/FuzzyMatchWrapper.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/FuzzyMatchWrapper.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/FuzzyMatchWrapper.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/FuzzyMatchWrapper.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/Match.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/Match.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/SentenceAlignment.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/SentenceAlignment.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/SentenceAlignment.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/SentenceAlignment.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/SuffixArray.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/SuffixArray.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/SuffixArray.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/SuffixArray.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/Vocabulary.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/Vocabulary.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/Vocabulary.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/Vocabulary.h</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/create_xml.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/create_xml.cpp</locationURI>
-		</link>
-		<link>
-			<name>fuzzy-match/create_xml.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/fuzzy-match/create_xml.h</locationURI>
-		</link>
-		<link>
 			<name>CompactPT/bin/gcc-4.6</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
@@ -1987,7 +1827,7 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/CompactPT/bin/pt.log</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6</name>
+			<name>Debug/CompactPT/DynSAInclude</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
@@ -2007,9 +1847,89 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release</name>
+			<name>Debug/CompactPT/DynSAInclude/FileHandler.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/FileHandler.cpp</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/FileHandler.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/FileHandler.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/Jamfile</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/Jamfile</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/RandLMCache.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/RandLMCache.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/RandLMFilter.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/RandLMFilter.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/bin</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/fdstream.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/fdstream.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/hash.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/hash.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/onlineRLM.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/onlineRLM.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/params.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/params.cpp</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/params.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/params.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/perfectHash.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/perfectHash.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/quantizer.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/quantizer.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/types.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/types.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/utils.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/utils.h</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/vocab.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/vocab.cpp</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/vocab.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/vocab.h</locationURI>
 		</link>
 		<link>
 			<name>LM/bin/gcc-4.6/release</name>
@@ -2022,7 +1942,7 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
@@ -2037,7 +1957,7 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
@@ -2052,7 +1972,7 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
@@ -2112,14 +2032,9 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/CompactPT/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/libCompactPT.a</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/libdynsa.a</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/libdynsa.a</locationURI>
 		</link>
 		<link>
 			<name>LM/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/Factory.o</name>
@@ -2132,17 +2047,32 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/ORLM.o</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/FileHandler.o</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/libdynsa.a</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/libdynsa.a</locationURI>
+		</link>
+		<link>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/FileHandler.o</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/FileHandler.o</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/params.o</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/params.o</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/params.o</locationURI>
 		</link>
 		<link>
-			<name>DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/vocab.o</name>
+			<name>Debug/CompactPT/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/vocab.o</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/DynSAInclude/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/DynSAInclude/vocab.o</locationURI>
 		</link>
